# Hydra-ROS

hydra_msgs/: CMakeLists.txt  package.xml
hydra_ros/: CMakeLists.txt  package.xml
hydra_ros/app/: hydra_node.cpp  reconstruct_mesh.cpp  scene_graph_logger_node.cpp
hydra_ros/config/: hydra_ros_visualizer_plugins.yaml
hydra_ros/config/datasets/: uhumans2.yaml
hydra_ros/config/label_spaces/: uhumans2_apartment_label_space.yaml
hydra_ros/config/lcd/: uhumans2.yaml
hydra_ros/config/pipelines/: default.yaml  lis_spot.yaml  uhumans2.yaml
hydra_ros/config/sinks/: active_window_sinks.yaml  gvd_places_sinks.yaml  mesh_segmenter_sinks.yaml
hydra_ros/include/hydra_ros/: hydra_ros_pipeline.h
hydra_ros/include/hydra_ros/active_window/: reconstruction_visualizer.h  tsdf_occupancy_publisher.h
hydra_ros/include/hydra_ros/backend/: ros_backend_publisher.h
hydra_ros/include/hydra_ros/frontend/: gvd_occupancy_publisher.h  gvd_visualization_utilities.h  gvd_visualizer_config.h  object_visualizer.h  places_visualizer.h  ros_frontend_publisher.h
hydra_ros/include/hydra_ros/input/: feature_receiver.h  image_receiver.h  pointcloud_adaptor.h  pointcloud_receiver.h  ros_data_receiver.h  ros_input_module.h  ros_sensors.h
hydra_ros/include/hydra_ros/loop_closure/: ros_lcd_registration.h
hydra_ros/include/hydra_ros/odometry/: ros_pose_graph_tracker.h
hydra_ros/include/hydra_ros/openset/: ros_embedding_group.h
hydra_ros/include/hydra_ros/utils/: bag_reader.h  bow_subscriber.h  dsg_streaming_interface.h  input_data_to_messages.h  lazy_publisher_group.h  node_utilities.h  occupancy_publisher.h  pose_cache.h  scene_graph_logger.h  tf_lookup.h
hydra_ros/include/hydra_ros/visualizer/: feature_color_adaptors.h  voxel_drawing.h
hydra_ros/launch/: hydra.launch.py  pipeline_config.launch.py
hydra_ros/launch/datasets/: uhumans2.launch.py
hydra_ros/launch/static_tfs/: uhumans2_static_tfs.xml
hydra_ros/rviz/: uhumans2.rviz
hydra_ros/src/: hydra_ros_pipeline.cpp
hydra_ros/src/active_window/: reconstruction_visualizer.cpp  tsdf_occupancy_publisher.cpp
hydra_ros/src/backend/: ros_backend_publisher.cpp
hydra_ros/src/frontend/: gvd_occupancy_publisher.cpp  gvd_visualization_utilities.cpp  gvd_visualizer_config.cpp  object_visualizer.cpp  places_visualizer.cpp  ros_frontend_publisher.cpp
hydra_ros/src/input/: feature_receiver.cpp  image_receiver.cpp  pointcloud_adaptor.cpp  pointcloud_receiver.cpp  ros_data_receiver.cpp  ros_input_module.cpp  ros_sensors.cpp
hydra_ros/src/loop_closure/: ros_lcd_registration.cpp
hydra_ros/src/odometry/: ros_pose_graph_tracker.cpp
hydra_ros/src/openset/: ros_embedding_group.cpp
hydra_ros/src/utils/: bag_reader.cpp  bow_subscriber.cpp  dsg_streaming_interface.cpp  input_data_to_messages.cpp  node_utilities.cpp  pose_cache.cpp  scene_graph_logger.cpp  tf_lookup.cpp
hydra_ros/src/visualizer/: feature_color_adaptors.cpp
hydra_visualizer/: CMakeLists.txt  package.xml
hydra_visualizer/app/: hydra_visualizer_node.cpp
hydra_visualizer/config/: dynamic_layer_defaults.yaml  external_plugins.yaml  layer_defaults.yaml  visualizer_config.yaml  visualizer_plugins.yaml
hydra_visualizer/include/hydra_visualizer/: dsg_visualizer.h  scene_graph_renderer.h
hydra_visualizer/include/hydra_visualizer/color/: colormap_utilities.h
hydra_visualizer/include/hydra_visualizer/groundtruth/: bounding_box_publisher.h  region_publisher.h
hydra_visualizer/include/hydra_visualizer/io/: graph_file_wrapper.h  graph_ros_wrapper.h  graph_wrapper.h
hydra_visualizer/include/hydra_visualizer/plugins/: basis_point_plugin.h  footprint_plugin.h  khronos_object_plugin.h  mesh_plugin.h  visualizer_plugin.h
hydra_visualizer/include/hydra_visualizer/utils/: config_manager.h  config_wrapper.h  configs.h  label_adaptors.h  marker_group_pub.h  marker_tracker.h  node_filter.h  polygon_utilities.h  visualizer_types.h  visualizer_utilities.h
hydra_visualizer/launch/: hydra_region_publisher.launch.py  hydra_rviz.launch.py  hydra_streaming_visualizer.launch.py  hydra_visualizer.launch.py
hydra_visualizer/src/: dsg_visualizer.cpp  scene_graph_renderer.cpp
hydra_visualizer/src/groundtruth/: bounding_box_publisher.cpp  region_publisher.cpp
hydra_visualizer/src/io/: graph_file_wrapper.cpp  graph_ros_wrapper.cpp
hydra_visualizer/src/plugins/: basis_point_plugin.cpp  footprint_plugin.cpp  khronos_object_plugin.cpp  mesh_plugin.cpp
hydra_visualizer/src/utils/: config_manager.cpp  configs.cpp  label_adaptors.cpp  marker_group_pub.cpp  marker_tracker.cpp  node_filter.cpp  polygon_utilities.cpp  visualizer_utilities.cpp
