<?xml version="1.0"?>
<package format="3">
  <name>hydra_ros</name>
  <version>1.0.0</version>
  <description>hydra ros nodes</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="yunchang@mit.edu">Yun Chang</author>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>hydra</depend>
  <depend>hydra_msgs</depend>
  <depend>hydra_visualizer</depend>
  <depend>image_transport</depend>
  <depend>kimera_pgmo_ros</depend>
  <depend>kimera_pgmo_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>

  <depend>pose_graph_tools_ros</depend>
  <depend>nav_interfaces</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>kimera_pgmo_rviz</exec_depend>
  <!-- optional build dependency -->
  <!-- <exec_depend>semantic_inference_msgs</exec_depend> -->

  <export>
   <build_type>ament_cmake</build_type>
 </export>

</package>
